--- a/my-app/src/components/Navigation/NavigationItems/NavigationLink/NavigationLink.css
+++ b/my-app/src/components/Navigation/NavigationItems/NavigationLink/NavigationLink.css
@@ -10,16 +10,16 @@
     text-decoration: none;
     width: 100%;
     box-sizing: border-box;
-    display:block;
+    display: block;
 }
 
-.NavigationLink a:hover, 
+.NavigationLink a:hover,
 .NavigationLink a:active,
-.NavigationLink a:active {
+.NavigationLink a.active {
     color: #40a4c8;
 }
 
-@media (min-width: 500px){
+@media (min-width: 500px) {
     .NavigationLink {
         margin: 0;
         display: flex;
@@ -27,20 +27,19 @@
         width: auto;
         align-items: center;
     }
-    
+
     .NavigationLink a {
-        color:white;
+        color: white;
         height: 100%;
         padding: 16px 10px;
         border-bottom: 4px solid transparent;
     }
-    
-    .NavigationLink a:hover, 
+
+    .NavigationLink a:hover,
     .NavigationLink a:active,
-    .NavigationLink a:active {
+    .NavigationLink a.active {
         background-color: #8f5c2c;
-        border-bottom: 4px solid#40a4c8;
+        border-bottom: 4px solid #40a4c8;
         color: white;
     }
 }
-
