--- a/my-app/src/components/UI/Button/Button.css
+++ b/my-app/src/components/UI/Button/Button.css
@@ -16,9 +16,14 @@
 }
 
 .Success {
-    color: #5C9210;
+    color: #5c9210;
 }
 
 .Danger {
     color: #944317;
+}
+
+.Button:disabled {
+    color: #ccc;
+    cursor: not-allowed;
 }
